# better-booking-bot

./: .dockerignore  .env.example  Dockerfile  README.md  api.py  bot.py  config.yaml  daemon.py  docker-compose.yml  notify.py  pyproject.toml
.github/workflows/: docker-publish.yml
schedule/: better-bot-daemon.service  better-bot@.service  better-bot@.timer
src/better_bot/: api.py  bot.py  checkout.py  daemon.py  notify.py
tests/: test_api.py  test_bot.py  test_checkout.py  test_daemon.py
