[project]
name = "better-booking-bot"
version = "0.1.0"
description = "Automated activity booking bot for Better (GLL) leisure centres."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "httpx>=0.28.1",
    "playwright>=1.60.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
]

[project.scripts]
better-bot = "bot:main"
better-bot-daemon = "daemon:main"
